stop messages with no line breaks from overflowing grid.

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --color-main: #71ddbd;
+  --color-main: #71ddbe;
   --color-main-light: #e1f6fb;
   --color-dark: #3f4656;
   --color-dark-medium: #515d6e;
-  --color-dark-light: #699297;
+  --color-dark-light: #699197;
   --color-light: #e5e5e5;
   --color-gray: #8b8b8b;
   --color-light-gray: #b2bdbd;
@@ -782,6 +782,7 @@ a {
   border-radius: 5px;
   margin-top: 1rem;
   margin-left: -4.2rem;
+  word-wrap: break-word;
 }
 
 .roomListRoom__actions svg {
@@ -1095,6 +1096,7 @@ a {
 .thread__details {
   font-size: 1.4rem;
   margin-top: 0.5rem;
+  word-wrap: break-word; /* force linebreaks in long words in msgs so that they don't overflow */
 }
 
 .room__message {
